--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -6,16 +6,24 @@
 }
 
 
+.background {
+    height: 100%;
+    width: 100%;
+
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
 .image {
-    display: flex;
-
-    height: 6rem;
-    width: auto;
-
-    border: 1px solid gray;
-    padding: 0.1rem 0.3rem;
+    height: 7rem;
+    width: 6rem;
 
     margin-right: 1rem;
+    padding: 0.3rem;
+
+    border: 1px solid gray;
     border-radius: 20%;
 }
 
