--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -88,6 +88,16 @@
 }
 
 
+.pointer {
+    cursor: pointer;
+}
+
+
+.selection {
+    user-select: none;
+}
+
+
 .title {
     border-bottom: 1px solid transparent;
 }
