--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+button {
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+
+  background: transparent;
+
+  border: 0;
+}
