Add close button to form

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -59,3 +59,14 @@
     border-radius: 10px;
     background: #FFFFFF;
 }
+
+
+.close {
+    position: absolute;
+    left: 1.5rem;
+}
+
+
+.relative {
+    position: relative;
+}
