--- a/src/ui/ImageDisplay/ImageDisplay.module.css
+++ b/src/ui/ImageDisplay/ImageDisplay.module.css
@@ -12,7 +12,6 @@
     height: 5rem;
     width: 4rem;
 
-    margin: 0 0.5rem 0 1.5rem;
     padding: 0.3rem;
 
     transition: all 200ms linear;
@@ -23,8 +22,14 @@
 }
 
 
-.ingredients {
-    max-width: 2.5rem;
-    margin-left: 5px;
-    line-height: 1.15;
+@media (max-width: 768px) {
+    .image {
+        height: 3.6rem;
+        width: 3.6rem;
+
+        padding: 0.3rem;
+        margin-bottom: 3px;
+
+        box-shadow: 0 3px 6px #00000042;
+    }
 }
