--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -32,3 +32,14 @@
     font-size: large;
     line-height: 1.3;
 }
+
+
+@media (max-width: 768px) {
+    .text {
+        font-size: larger;
+    }
+
+    .container {
+        top: 70vh;
+    }
+}
