--- a/src/ui/Disclaimer/Disclaimer.module.css
+++ b/src/ui/Disclaimer/Disclaimer.module.css
@@ -4,3 +4,12 @@
     font-weight: 500;
     text-align: center;
 }
+
+
+@media (max-width: 768px) {
+    .text {
+        width: 100%;
+        font-size: smaller;
+        margin-bottom: 0.5rem;
+    }
+}
